Audit logs new (#6)
* initial audit logs commit

* isVerified flag for view project data

* Complete Audit Logs feature, gemini prompt enhancement-confidence

* Added an example number to extract the numbers for image and pdfs. Enhanced grid detection logic

* new changes

---------

Co-authored-by: rushika-ananya <ananyarushika@gmail.com>
Co-authored-by: Macpiey <udbhav8@gmail.com>